# termtint

./: .gitignore  .termtint  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: .termtint  colors.rs  config.rs  init.rs  iterm.rs  main.rs  state.rs  user_config.rs
