[package]
name = "termtint"
version = "0.2.0"
edition = "2021"
description = "Automatically colorize iTerm2 tabs and backgrounds based on directory"
license = "MIT"
repository = "https://github.com/tomdale/termtint"
readme = "README.md"
keywords = ["iterm2", "terminal", "cli", "color", "theme"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
csscolorparser = { version = "0.7", features = ["named-colors"] }
oklab = "1.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
